solc_ossfuzz_seed_corpus/test_sol/test_7f4ef2bcf7a51283bb1e0132535b7794ddc5bae66fc99b7a8162315e3f7aa760_269890dca9b6e234deae7d10ede5f2fd07d3d043_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
  event ev0(uint112  ep0, function (bytes memory, address payable, int72) internal    ep1);
  bool   s0;
  uint232   s1 = uint232(0);
  constructor(bool i0)   {
    s0 = true;
    {
      (bool l0, bytes memory l1) = address(this).call(bytes("e856b545b29327c47a6a7eb81c1b8b3714ffffffffffffffffffffffffffffffffff"));
      (bool l2, bytes memory l3) = address(this).call(bytes("7f10785876cd1048906778751b28c2d4fed7ffffffffffffffffffff"));
    }
  }
}
pragma solidity >= 0.0.0;
// ----
// TypeError 3417: (su0.sol:40-103): Internal or recursive type is not allowed as event parameter type.
